--- a/style.css
+++ b/style.css
@@ -60,3 +60,32 @@ header {
 .three {
     background: url(https://raw.githubusercontent.com/theinfinox/theinfinox.github.io/main/images/3.jpg)no-repeat center fixed;
 }
+
+#menu {
+    width: 100%;
+    height: 60px;
+    background: #fff;
+    box-shadow: 1px 1px 15px #000;
+    z-index: 100;
+    position: absolute;
+    margin: 0px auto;
+}
+
+#menu li {
+    float: left;
+    margin-right: 60px;
+    margin-top: 8px;
+    list-style: none;
+}
+
+#menu a {
+    font-weight: 100;
+    font-size: 20px;
+    color: brown;
+    text-decoration: none;
+}
+
+#menu li:hover {
+    transform: scale(1.2);
+    transition: 1s;
+}
