--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px auto;
-    font-family: ubuntu;
+    font-family: Comfortaa;
     background: linear-gradient(#fff, #ccc);
 }
 
@@ -88,4 +88,14 @@ header {
 #menu li:hover {
     transform: scale(1.2);
     transition: 1s;
+}
+
+section {
+    width: 100%;
+    background-color: #fff;
+}
+
+iframe {
+    float: left;
+    margin-left: 10px;
 }
