--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px auto;
-    font-family: Comfortaa;
     background: linear-gradient(#fff, #ccc);
+    font-family: 'Comfortaa';
 }
 
 header {
