--- a/style.css
+++ b/style.css
@@ -100,3 +100,15 @@ iframe {
     margin: 0px auto;
     display: block;
 }
+
+#name a {
+    width: 300px;
+    height: 100px;
+    position: absolute;
+}
+
+#name img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
