--- a/style.css
+++ b/style.css
@@ -101,13 +101,25 @@ iframe {
     display: block;
 }
 
-#name a {
-    width: 300px;
-    height: 100px;
-    position: absolute;
+#name {
     margin: 0px auto;
+    display: block;
+    width: 42%;
+    height: 400px;
+    margin-top: 226px;
 }
 
+#name a {
+    width: 40.5%;
+    height: 293px;
+    position: absolute;
+    background-color: #fff;
+    opacity: 50%;
+    padding: 10px;
+}
+
+
+}
 #name img {
     width: 100%;
     height: 100%;
