--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@ body {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image: url("../../assets/img/hero-mobile.jpg");
+  background-image: url("hero-mobile.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -15,12 +15,12 @@ body {
 
 @media (min-width: 768px) {
   #hero {
-    background-image: url("../../assets/img/bg.jpg");
+    background-image: url("bg.jpg");
   }
 }
 
 .navbar-light .navbar-brand {
-  background-image: url("../../assets/img/logo.svg");
+  background-image: url("logo.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 80%;
@@ -108,10 +108,8 @@ body {
 
 @media (min-width: 992px) {
   #video-and-stats iframe {
-    width: 900px;
+    margin-top: 55px;
     height: 500px;
-    margin: 0px;
-    margin-top: 57px;
   }
 }
 
@@ -151,7 +149,7 @@ body {
 #aero {
   width: 100%;
   height: 100vh;
-  background-image: url("../../assets/img/back.jpg");
+  background-image: url("back.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -201,7 +199,7 @@ body {
 #topview {
   width: 100%;
   height: 120vh;
-  background-image: url("../../assets/img/top.jpg");
+  background-image: url("top.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
